首页-获取用户信息

--- a/web_back/index.html
+++ b/web_back/index.html
@@ -113,12 +113,12 @@
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script>
         $(function () {
+            //退出
             $('#tuichui').on('click', function (e) {
                 console.log('1');
                 e.preventDefault();
                 $.post({
                     url: 'http://localhost:8000/admin/logout',
-
                     success: function (backData) {
                         console.log(backData);
                         if (backData.code == 200) {
@@ -126,6 +126,17 @@
                         };
                     }
                 });
+            });
+            //获取用户信息
+            $.get({
+                url:'http://localhost:8000/admin/getuser ',
+               success:function(backData){
+                   console.log(backData);
+                   
+                   $('.user_info img').attr('src',backData.data.user_pic);
+                   $('.user_info span').html('欢迎&nbsp;&nbsp;'+backData.data.nickname);
+                   $('.user_center_link img').attr('src',backData.data.user_pic);
+               }
             });
         });
     </script>
