--- a/web_back/user.html
+++ b/web_back/user.html
@@ -45,11 +45,10 @@
                     <label for="inputPassword3" class="col-sm-2 control-label">用户图标：</label>
                     <div class="col-sm-10">
                         <img src="images/2.jpg" alt="" class="user_pic">
-                        <input type="file"  name="user_pic" id="exampleInputFile">
-                        <!-- <br>
+                        <input type="file"  name="user_pic" id="exampleInputFile" style="display: none;">
                         <label for="exampleInputFile">
                             <img src="./images//uploadFileIcon.png" alt="">
-                        </label> -->
+                        </label> 
                     </div>
                 </div>
 
